--- a/_includes/entropy-garden/entropy-garden.html
+++ b/_includes/entropy-garden/entropy-garden.html
@@ -237,8 +237,8 @@
       <optgroup label="Stochastic Plants">
         <option value="stochasticBush">Stochastic Bush</option>
         <option value="stochasticTree">Stochastic Tree</option>
-        <option value="stochasticVine">Vine</option>
-        <option value="stochasticFern">Windswept</option>
+        <option value="stochasticVine">Stochastic Vine</option>
+        <option value="stochasticFern">Stochastic Windswept</option>
       </optgroup>
       <optgroup label="Sky Objects">
         <option value="sun">Sun</option>
